--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 		maven { url "https://repo.spring.io/milestone" }
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.8.RELEASE")
 		classpath("org.liquibase:liquibase-core:3.4.1")
     	classpath("org.liquibase:liquibase-gradle-plugin:1.1.1")
     	classpath("org.mariadb.jdbc:mariadb-java-client:2.2.0")
