--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,6 @@ buildscript {
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.8.RELEASE")
-		classpath("org.liquibase:liquibase-core:3.4.1")
-    	classpath("org.liquibase:liquibase-gradle-plugin:1.1.1")
     	classpath("org.mariadb.jdbc:mariadb-java-client:2.2.0")
 	}
 }
@@ -18,8 +16,6 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'liquibase'
-
 
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
@@ -34,23 +30,6 @@ repositories {
 dependencies {
 	compile('org.springframework.shell:spring-shell-starter:2.0.0.M2')
 	compile('org.mariadb.jdbc:mariadb-java-client:2.1.2')
+	compile('org.jline:jline:3.5.1')
 }
 
-
-def changeLog = "$projectDir/sql/changelog.xml"
-
-task('dev') {
-	doLast {
-		println "executing dev"
-		liquibase {
-		    activities {
-		        main {
-		            changeLogFile changeLog
-		            url 'jdbc:mariadb://localhost:3306/zoolander'
-		            username 'ben'
-		            password 'stiller'
-		        }
-		    }
-		}  
-	}  
-}
